--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: base
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python = 3.8
 
@@ -9,10 +10,11 @@ dependencies:
   - pyarrow
 
   # omnisci libraries
-  - pyomniscidb = 5.8.0
+  - pyomniscidb = 5.10.1
   - pyomnisci = 0.28.2
   - sqlalchemy-omnisci = 0.1.3
-  - ibis-omniscidb = 2.0.4
+  - ibis-omniscidb = 2.0.5
+  # - ibis-framework-core = 2.1.1
 
   # geo
   - geopandas = 0.9
@@ -20,7 +22,11 @@ dependencies:
   - shapely = 1.7.1
   - pygeos = 0.10
   - gdal = 3.3.2
+  # - gdal = 3.4.0
 
-  - prefect = 0.15.9
+  - prefect = 0.15.13
+  - dask-core = 2022.1.1
+  - distributed = 2022.1.1
+
   - python-dotenv = 0.19
   - sqlparse = 0.4.2
