--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,20 @@
-name: base
+name: heavyai-olio
 channels:
   - conda-forge
   - defaults
 dependencies:
   - python = 3.8
 
+  - pytest
+
   - pandas
 
   - pyarrow
 
-  # omnisci libraries
-  - pyomniscidb = 5.10.1
-  - pyomnisci = 0.28.2
-  - sqlalchemy-omnisci = 0.1.3
-  - ibis-omniscidb = 2.0.5
-  # - ibis-framework-core = 2.1.1
+  # heavyai libraries
+  - heavyai
+  - ibis-heavyai = 1.1
+  - sqlalchemy-heavyai
 
   # geo
   - geopandas = 0.9
@@ -29,5 +29,6 @@ dependencies:
   - dask-core = 2022.1.1
   - distributed = 2022.1.1
 
+  - ipython
   - python-dotenv = 0.19
   - sqlparse = 0.4.2
